--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -330,46 +330,46 @@ Mappings:
       Arch: HVM64
   AWSRegionArch2AMI:
     ap-northeast-1:
-      HVM64: ami-b45db1d2
+      HVM64: ami-59907e3f
       HVMG2: NOT_SUPPORTED
     ap-northeast-2:
-      HVM64: ami-35c71e5b
+      HVM64: ami-52e0393c
       HVMG2: NOT_SUPPORTED
     ap-south-1:
-      HVM64: ami-61710a0e
+      HVM64: ami-68433807
       HVMG2: NOT_SUPPORTED
     ap-southeast-1:
-      HVM64: ami-cf44d8ac
+      HVM64: ami-69a23d0a
       HVMG2: NOT_SUPPORTED
     ap-southeast-2:
-      HVM64: ami-5d06183e
+      HVM64: ami-d3f3edb0
       HVMG2: NOT_SUPPORTED
     ca-central-1:
-      HVM64: ami-d8fa44bc
+      HVM64: ami-dff44abb
       HVMG2: NOT_SUPPORTED
     eu-central-1:
-      HVM64: ami-ecf75883
+      HVM64: ami-5d923d32
       HVMG2: NOT_SUPPORTED
     eu-west-1:
-      HVM64: ami-3ca75245
+      HVM64: ami-d7a95dae
       HVMG2: NOT_SUPPORTED
     eu-west-2:
-      HVM64: ami-8a3524ee
+      HVM64: ami-fa20319e
       HVMG2: NOT_SUPPORTED
     sa-east-1:
-      HVM64: ami-fcd1a690
+      HVM64: ami-f02a5c9c
       HVMG2: NOT_SUPPORTED
     us-east-1:
-      HVM64: ami-f9acf682
+      HVM64: ami-80d6f1fb
       HVMG2: NOT_SUPPORTED
     us-east-2:
-      HVM64: ami-290b2b4c
+      HVM64: ami-741c3c11
       HVMG2: NOT_SUPPORTED
     us-west-1:
-      HVM64: ami-42163e22
+      HVM64: ami-d2d6feb2
       HVMG2: NOT_SUPPORTED
     us-west-2:
-      HVM64: ami-519d7929
+      HVM64: ami-2b957253
       HVMG2: NOT_SUPPORTED
 Resources:
   ConfluenceClusterNodeRole:
@@ -446,10 +446,11 @@ Resources:
             !If
               - DoCollectd
               - yum:
-                  collectd: []
+                  collectd: [5.7.1]
                   collectd-java: []
                   collectd-generic-jmx: []
                   collectd-rrdtool: []
+                  collectd-disk: []
               - !Ref "AWS::NoValue"
           files:
             /etc/atl:
@@ -660,10 +661,11 @@ Resources:
             !If
               - DoCollectd
               - yum:
-                  collectd: []
+                  collectd: [5.7.1]
                   collectd-java: []
                   collectd-generic-jmx: []
                   collectd-rrdtool: []
+                  collectd-disk: []
               - Ref "AWS::NoValue"
           files:
             /etc/atl:
