--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -70,9 +70,9 @@ Metadata:
       KeyName:
         default: Key Name *
       HostedZone:
-        default: Route53 Hosted Zone (optional)
+        default: Route 53 Hosted Zone (optional)
       SubDomainName:
-        default: Sub domain name will be used alone with HostedZone (optional)
+        default: Sub-domain for Hosted Zone (optional)
       SSLCertificateName:
         default: SSL Certificate Name
       ExternalSubnets:
@@ -127,14 +127,32 @@ Parameters:
       - c3.2xlarge
       - c3.4xlarge
       - c3.8xlarge
+      - c4.large
+      - c4.xlarge
+      - c4.2xlarge
+      - c4.4xlarge
+      - c4.8xlarge
       - i2.xlarge
       - i2.2xlarge
       - i2.4xlarge
       - i2.8xlarge
+      - i3.large
+      - i3.xlarge
+      - i3.2xlarge
+      - i3.4xlarge
+      - i3.8xlarge
+      - i3.16xlarge
       - r3.xlarge
       - r3.2xlarge
       - r3.4xlarge
       - r3.8xlarge
+      - r4.large
+      - r4.xlarge
+      - r4.2xlarge
+      - r4.4xlarge
+      - r4.8xlarge
+      - r4.16xlarge
+      - x1.16xlarge
       - x1.32xlarge
     ConstraintDescription: "Must be an EC2 instance type in the C3, I2, R3, or X1 family, 'xlarge' or larger"
     Default: c3.xlarge
@@ -146,14 +164,32 @@ Parameters:
       - c3.2xlarge
       - c3.4xlarge
       - c3.8xlarge
+      - c4.large
+      - c4.xlarge
+      - c4.2xlarge
+      - c4.4xlarge
+      - c4.8xlarge
       - i2.xlarge
       - i2.2xlarge
       - i2.4xlarge
       - i2.8xlarge
+      - i3.large
+      - i3.xlarge
+      - i3.2xlarge
+      - i3.4xlarge
+      - i3.8xlarge
+      - i3.16xlarge
       - r3.xlarge
       - r3.2xlarge
       - r3.4xlarge
       - r3.8xlarge
+      - r4.large
+      - r4.xlarge
+      - r4.2xlarge
+      - r4.4xlarge
+      - r4.8xlarge
+      - r4.16xlarge
+      - x1.16xlarge
       - x1.32xlarge
     ConstraintDescription: "Must be an EC2 instance type in the C3, I2, R3, or X1 family, 'xlarge' or larger"
     Default: c3.xlarge
@@ -244,10 +280,12 @@ Parameters:
     Type: AWS::EC2::KeyPair::KeyName
   HostedZone:
     ConstraintDescription: Must be the name of an existing Route53 Hosted Zone.
-    Description: The domain name of the Route53 PRIVATE Hosted Zone in which to create cnames
+    Description: Domain name of the Route 53 private Hosted Zone in which to create cnames.
+    Default: ""
     Type: String
   SubDomainName:
-    Description: Will be use alone with the Route53 PRIVATE Hosted Zone in which to create cnames
+    Description: Leave this field blank to use your stack name as the sub-domain.
+    Default: ""
     Type: String
   SSLCertificateName:
     Description: The name of your Server Certificate to use for HTTPS.  Leave blank if you don't want to set up HTTPS at this time
@@ -391,6 +429,18 @@ Mappings:
       Arch: HVM64
     i2.8xlarge:
       Arch: HVM64
+    i3.large:
+      Arch: HVM64
+    i3.xlarge:
+      Arch: HVM64
+    i3.2xlarge:
+      Arch: HVM64
+    i3.4xlarge:
+      Arch: HVM64
+    i3.8xlarge:
+      Arch: HVM64
+    i3.16xlarge:
+      Arch: HVM64
     m4.large:
       Arch: HVM64
     m4.xlarge:
@@ -412,6 +462,20 @@ Mappings:
     r3.4xlarge:
       Arch: HVM64
     r3.8xlarge:
+      Arch: HVM64
+    r4.large:
+      Arch: HVM64
+    r4.xlarge:
+      Arch: HVM64
+    r4.2xlarge:
+      Arch: HVM64
+    r4.4xlarge:
+      Arch: HVM64
+    r4.8xlarge:
+      Arch: HVM64
+    r4.16xlarge:
+      Arch: HVM64
+    x1.16xlarge:
       Arch: HVM64
     x1.32xlarge:
       Arch: HVM64
@@ -953,6 +1017,7 @@ Resources:
       SubnetId: !Select [1, !Ref InternalSubnets]
   EFSCname:
     Type: AWS::Route53::RecordSet
+    Condition: UseHostedZone
     Properties:
       HostedZoneName: !Ref HostedZone
       Comment: Route53 cname for the efs
@@ -1013,6 +1078,7 @@ Resources:
       Port: !If [DoSSL, "443", "80"]
       Protocol: !If [DoSSL, HTTPS, HTTP]
   LoadBalancerCname:
+    Condition: UseHostedZone
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneName: !Ref HostedZone
