backport yaml template changes to pass CatalinaOpts to AMI

--- a/templates/JiraDataCenter.template
+++ b/templates/JiraDataCenter.template
@@ -570,6 +570,16 @@
                       "ATL_APP_DATA_MOUNT_ENABLED=false\n",
                       "ATL_DB_NAME=jira\n",
                       "ATL_DB_USER=jira\n",
+                      {
+                          "Fn::Sub": [
+                              "ATL_CATALINA_OPTS=\"${CatalinaOpts}\"",
+                              {
+                                  "CatalinaOpts": {
+                                      "Ref": "CatalinaOpts"
+                                  }
+                              }
+                          ]
+                      },
                       "ATL_DB_PASSWORD=",
                       {
                         "Ref": "DBMasterUserPassword"
