--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -41,6 +41,7 @@ Metadata:
           default: Advanced (Optional)
         Parameters:
           - CatalinaOpts
+          - JvmHeapOverride
           - StartCollectd
     ParameterLabels:
       AssociatePublicIpAddress:
@@ -67,6 +68,8 @@ Metadata:
         default: RDS Provisioned IOPS
       JiraProduct:
         default: JIRA Product *
+      JvmHeapOverride:
+        default: JVM Heap Size Override
       KeyName:
         default: Key Name *
       CustomDnsName:
@@ -83,50 +86,80 @@ Metadata:
         default: VPC *
 Parameters:
   AssociatePublicIpAddress:
+    Default: 'true'
     Description: Controls if the EC2 instances are assigned a public IP address
     Type: String
-    Default: 'true'
     AllowedValues:
       - 'true'
       - 'false'
     ConstraintDescription: Must be 'true' or 'false'.
   ClusterNodeMax:
-    Type: Number
     Default: '1'
+    Type: Number
   ClusterNodeMin:
-    Type: Number
     Default: '1'
+    Type: Number
   ClusterNodeInstanceType:
-    Type: String
     Default: c3.xlarge
+    Type: String
     AllowedValues:
       - c3.xlarge
       - c3.2xlarge
       - c3.4xlarge
       - c3.8xlarge
-      - i2.xlarge
-      - i2.2xlarge
-      - i2.4xlarge
-      - i2.8xlarge
+      - c4.large
+      - c4.xlarge
+      - c4.2xlarge
+      - c4.4xlarge
+      - c4.8xlarge
+      - i3.large
+      - i3.xlarge
+      - i3.2xlarge
+      - i3.4xlarge
+      - i3.8xlarge
+      - i3.xlarge
+      - i3.2xlarge
+      - i3.4xlarge
+      - i3.8xlarge
+      - m3.medium
+      - m4.large
+      - m4.xlarge
+      - m4.2xlarge
+      - m4.4xlarge
+      - m4.10xlarge
+      - m4.16xlarge
+      - r3.large
       - r3.xlarge
       - r3.2xlarge
       - r3.4xlarge
       - r3.8xlarge
+      - r4.large
+      - r4.xlarge
+      - r4.2xlarge
+      - r4.4xlarge
+      - r4.8xlarge
       - t2.medium
       - t2.large
+      - t2.xlarge
+      - t2.2xlarge
+      - x1.16xlarge
       - x1.32xlarge
     ConstraintDescription: >-
       Must be an EC2 instance type in the C3, I2, R3, or X1 family, 'xlarge' or
       larger
     Description: Instance type for the cluster nodes.
   CatalinaOpts:
-    Type: String
     Default: ''
+    Type: String
   DBInstanceClass:
+    Default: db.m4.xlarge
     Description: RDS instance type
     Type: String
-    Default: db.m4.xlarge
     AllowedValues:
+      - db.m3.medium
+      - db.m3.large
+      - db.m3.xlarge
+      - db.m3.2xlarge
       - db.m4.large
       - db.m4.xlarge
       - db.m4.2xlarge
@@ -141,8 +174,8 @@ Parameters:
       - db.t2.large
     ConstraintDescription: 'Must be a valid RDS instance class, ''db.t2.medium'' or larger.'
   DBMasterUserPassword:
-    NoEcho: 'true'
     Default: ''
+    NoEcho: 'true'
     Description: Database admin account password.
     Type: String
     MaxLength: '41'
@@ -157,31 +190,31 @@ Parameters:
     ConstraintDescription: Must contain only alphanumeric characters.
     NoEcho: 'true'
   DBStorage:
+    Default: '10'
     Description: 'Database allocated storage size, in gigabytes (GB)'
     Type: Number
-    Default: '10'
   DBStorageType:
+    Default: General Purpose (SSD)
     Description: Database storage type
     Type: String
-    Default: General Purpose (SSD)
     AllowedValues:
       - General Purpose (SSD)
       - Provisioned IOPS
     ConstraintDescription: Must be 'General Purpose (SSD)' or 'Provisioned IOPS'.
   DBMultiAZ:
-    Type: String
     Default: 'true'
+    Type: String
     AllowedValues:
       - 'true'
       - 'false'
     ConstraintDescription: Must be 'true' or 'false'.
   DBIops:
+    Default: '1000'
     Description: >-
       Must be in the range of 1000 - 30000 and a multiple of 1000. This value is
       only used with Provisioned IOPS. Note: The ratio of IOPS per
       allocated-storage must be between 3.00 and 10.00.
     Type: Number
-    Default: '1000'
     MinValue: '1000'
     MaxValue: '30000'
     ConstraintDescription: Must be in the range 1000 - 30000.
@@ -195,6 +228,9 @@ Parameters:
       - Software
       - ServiceDesk
       - Core
+  JvmHeapOverride:
+    Default: ""
+    Type: String
   KeyName:
     Description: The EC2 Key Pair to allow SSH access to the instances
     Type: 'AWS::EC2::KeyPair::KeyName'
@@ -213,17 +249,17 @@ Parameters:
       cnames
     Type: String
   SSLCertificateName:
+    Default: ''
     Description: >-
       The name of your Server Certificate to use for HTTPS.  Leave blank if you
       don't want to set up HTTPS at this time
     Type: String
     MinLength: '0'
     MaxLength: '32'
-    Default: ''
   StartCollectd:
+    Default: 'true'
     Description: Should the collectd service be started
     Type: String
-    Default: 'true'
     AllowedValues:
       - 'true'
       - 'false'
@@ -257,6 +293,12 @@ Conditions:
     - !Equals
       - !Ref DBMasterUserPassword
       - ''
+  DoSSL: !Not
+    - !Equals
+      - !Ref SSLCertificateName
+      - ''
+  OverrideHeap:
+    !Not [!Equals [!Ref JvmHeapOverride, ""]]
   UsePublicIp: !Equals
     - !Ref AssociatePublicIpAddress
     - 'true'
@@ -268,74 +310,134 @@ Conditions:
     - !Equals
       - !Ref HostedZone
       - ''
-  DoSSL: !Not
-    - !Equals
-      - !Ref SSLCertificateName
-      - ''
 Mappings:
   AWSInstanceType2Arch:
     c3.large:
       Arch: HVM64
+      Jvmheap: 3072
     c3.xlarge:
       Arch: HVM64
+      Jvmheap: 6144
     c3.2xlarge:
       Arch: HVM64
+      Jvmheap: 12288
     c3.4xlarge:
       Arch: HVM64
+      Jvmheap: 24576
     c3.8xlarge:
       Arch: HVM64
+      Jvmheap: 49152
     c4.large:
       Arch: HVM64
+      Jvmheap: 3072
     c4.xlarge:
       Arch: HVM64
+      Jvmheap: 6144
     c4.2xlarge:
       Arch: HVM64
+      Jvmheap: 12288
     c4.4xlarge:
       Arch: HVM64
+      Jvmheap: 24576
     c4.8xlarge:
       Arch: HVM64
+      Jvmheap: 49152
     d2.xlarge:
       Arch: HVM64
+      Jvmheap: 24576
     d2.2xlarge:
       Arch: HVM64
+      Jvmheap: 49152
     d2.4xlarge:
       Arch: HVM64
+      Jvmheap: 98302
     d2.8xlarge:
       Arch: HVM64
-    i2.xlarge:
+      Jvmheap: 196608
+    i3.large:
       Arch: HVM64
-    i2.2xlarge:
+      Jvmheap: 12288
+    i3.xlarge:
       Arch: HVM64
-    i2.4xlarge:
+      Jvmheap: 24576
+    i3.2xlarge:
       Arch: HVM64
-    i2.8xlarge:
+      Jvmheap: 49152
+    i3.4xlarge:
       Arch: HVM64
+      Jvmheap: 98302
+    i3.8xlarge:
+      Arch: HVM64
+      Jvmheap: 196608
+    m3.medium:
+      Arch: HVM64
+      Jvmheap: 3072
     m4.large:
       Arch: HVM64
+      Jvmheap: 6144
     m4.xlarge:
       Arch: HVM64
+      Jvmheap: 12288
     m4.2xlarge:
       Arch: HVM64
+      Jvmheap: 24576
     m4.4xlarge:
       Arch: HVM64
+      Jvmheap: 49152
     m4.10xlarge:
       Arch: HVM64
+      Jvmheap: 122880
+    m4.16xlarge:
+      Arch: HVM64
+      Jvmheap: 196608
     r3.large:
       Arch: HVM64
+      Jvmheap: 12288
     r3.xlarge:
       Arch: HVM64
+      Jvmheap: 24576
     r3.2xlarge:
       Arch: HVM64
+      Jvmheap: 49152
     r3.4xlarge:
       Arch: HVM64
+      Jvmheap: 98304
     r3.8xlarge:
       Arch: HVM64
+      Jvmheap: 190464
+    r4.large:
+      Arch: HVM64
+      Jvmheap: 12288
+    r4.xlarge:
+      Arch: HVM64
+      Jvmheap: 24576
+    r4.2xlarge:
+      Arch: HVM64
+      Jvmheap: 49152
+    r4.4xlarge:
+      Arch: HVM64
+      Jvmheap: 98302
+    r4.8xlarge:
+      Arch: HVM64
+      Jvmheap: 190464
     t2.medium:
       Arch: HVM64
+      Jvmheap: 3072
     t2.large:
       Arch: HVM64
+      Jvmheap: 6144
+    t2.xlarge:
+      Arch: HVM64
+      Jvmheap: 12288
+    t2.2xlarge:
+      Arch: HVM64
+      Jvmheap: 24576
+    x1.16xlarge:
+      Arch: HVM64
+      Jvmheap: 749568
     x1.32xlarge:
       Arch: HVM64
+      Jvmheap: 1499136
   AWSRegionArch2AMI:
     us-east-1:
       HVM64: ami-bb5642ac
@@ -432,6 +534,15 @@ Resources:
                     ATL_DB_NAME=jira
                   - |
                     ATL_DB_USER=jira
+                  - !Sub
+                    - "ATL_JVM_HEAP=${AtlJvmHeap}"
+                    - AtlJvmHeap: !If
+                        - OverrideHeap
+                        - !Ref 'JvmHeapOverride'
+                        - !FindInMap
+                            - AWSInstanceType2Arch
+                            - !Ref ClusterNodeInstanceType
+                            - Jvmheap
                   - !Sub
                     - 'ATL_CATALINA_OPTS="${CatalinaOpts}"'
                     - CatalinaOpts: !Ref CatalinaOpts
