mountall errors if things are already mounted so ignore errors

--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -689,7 +689,7 @@ Resources:
               ignoreErrors: false
             030_mount_all:
               command: mount -a
-              ignoreErrors: 'false'
+              ignoreErrors: 'true'
             040_make_shared_home_dir:
               command: mkdir -p /media/atl/jira/shared
               ignoreErrors: 'false'
